# mlx-c-gen

./: CMakeLists.txt  README.md  go.mod  go.sum  go.work  go.work.sum  mlx-c.pc.in
.github/workflows/: generate-candidate.yml  revision-policy.yml
codegen/: candidate-provenance.json  candidate-regen-report.json  generated-files.txt  lock.c  manifest.yaml  mlxc-capi.lock.json  types.yaml
codegen/custom/: jaccl.yaml
codegen/modules/: compile.yaml  cuda.yaml  distributed.yaml  fast.yaml  fft.yaml  graph_utils.yaml  io.yaml  linalg.yaml  memory.yaml  metal.yaml  ops.yaml  random.yaml  transforms.yaml  transforms_impl.yaml
codegen/smoke/cmake-consumer/: CMakeLists.txt  consumer.c
codegen/smoke/cmake-jaccl-consumer/: CMakeLists.txt  consumer.c
design/: codegen-branch-map.md  jaccl-native-vs-dylib-bench.md
design/nlm-instructions/: 01-panel-codebase-review.md  02-panel-history-audit.md  03-panel-reaudit.md
docs/src/: codegen.rst  index.rst  install.rst  jaccl.rst
examples/: CMakeLists.txt  example-jaccl.c  example-metal-kernel.c
internal/jacclc/: doc.gen.go  functions.gen.go  generate.go  jacclc_test.go  lib.gen.go  parity_bench_test.go  types.gen.go
internal/jacclnative/: README.md  backend.go  collective.go  config.go  doc.go  dtype.go  group.go  half.go  jacclnative_test.go  rdma.go  rdma_darwin_arm64.go  rdma_darwin_arm64_test.go  rdma_destination.go  rdma_destination_test.go  rdma_resource.go  rdma_unsupported.go  side_channel.go  side_channel_test.go  trace.go  transport_memory_test.go
internal/mlxcgen/apilock/: doc.go  lock.go  lock_test.go  parse.go
internal/mlxcgen/customspec/: doc.go  header.go  header_integration_test.go  spec.go  spec_test.go
internal/mlxcgen/doccoverage/: doccoverage.go  doccoverage_test.go
internal/mlxcgen/generators/: closure.go  closure_test.go  diagnostics_test.go  generate.go  graph_utils_test.go  map.go  metal_test.go  names_test.go  vector.go  yaml.go  yaml_test.go
internal/mlxcgen/hooks/: hooks.go  hooks_test.go
internal/mlxcgen/inventory/: doc.go  inventory.go  inventory_test.go
internal/mlxcgen/ir/: doc.go  ir.go  ir_test.go
internal/mlxcgen/parser/: parser.go  parser_test.go
internal/mlxcgen/plan/: doc.go  plan.go  plan_test.go
internal/mlxcgen/puregojaccl/: doc.go  generate.go  generate_test.go
internal/mlxcgen/regenreport/: doc.go  regenreport.go  regenreport_test.go
internal/mlxcgen/revision/: revision.go  revision_test.go
internal/mlxcgen/symbols/: doc.go  symbols.go  symbols_test.go
internal/mlxcgen/types/: policy.go  types.go  types_test.go
internal/mlxcgen/variants/: variants.go  variants_test.go
jaccl/: doc.go  example_test.go  jaccl.go  jaccl_test.go
mlx/c/: compile.h  config.h  config.h.in  cuda.h  distributed.h  fast.cpp  fast.h  fft.h  io.h  jaccl.cpp  jaccl.h  linalg.cpp  linalg.h  memory.h  metal.cpp  metal.h  mlx.h  ops.cpp  ops.h  random.h  stream.cpp  stream.h  transforms.h
mlx/c/private/: enums.h  stream.h
tools/: mlx-c-check-generated  mlx-c-gen-cached  mlx-c-jaccl-check-cached  mlx-c-publish-candidate  mlx-c-regen  mlx-c-tool-cached
tools/mlx-c-candidate/: main.go  main_test.go
tools/mlx-c-gen/: main.go  main_test.go
tools/mlx-c-gen-purego-jaccl/: main.go
tools/mlx-c-install-smoke/: main.go  main_test.go
tools/mlx-c-inventory-check/: main.go
tools/mlx-c-jacclc-rank-smoke/: main.go
tools/mlx-c-jacclnative-rank-smoke/: main.go
tools/mlx-c-jacclnative-smoke/: main.go  main_test.go
tools/mlx-c-lock/: main.go
tools/mlx-c-plan-check/: main.go
tools/mlx-c-regen-report/: main.go
tools/mlx-c-revision-check/: main.go  main_test.go
tools/mlx-c-symbol-check/: main.go
